sandbox_fixtures/pls_ta_probe/force-app/main/default/objects/PLS_TA_Probe__c/PLS_TA_Probe__c.object-meta.xml
<CustomObject>
    <label>PLS TA Probe</label>
    <nameField>
        <displayFormat>PT-{0000}</displayFormat>
        <label>Probe Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PLS TA Probes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>