sandbox_fixtures/pls_ta_probe/force-app/main/default/objects/PLS_TA_Probe__c/fields/PLS_TA_Amount__c.field-meta.xml
<CustomField>
    <fullName>PLS_TA_Amount__c</fullName>
    <label>Amount</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>