sandbox_fixtures/pls_ta_probe/force-app/main/default/objects/PLS_TA_Probe__c/fields/PLS_TA_Archive_Reason__c.field-meta.xml
<CustomField>
    <fullName>PLS_TA_Archive_Reason__c</fullName>
    <label>Archive Reason</label>
    <type>Text</type>
    <length>255</length>
</CustomField>