sandbox_fixtures/pls_ta_probe/force-app/main/default/objects/PLS_TA_Probe__c/fields/PLS_TA_Locked__c.field-meta.xml
<CustomField>
    <fullName>PLS_TA_Locked__c</fullName>
    <label>Locked</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>