sandbox_fixtures/pls_ta_probe/force-app/main/default/objects/PLS_TA_Probe__c/fields/PLS_TA_Parent__c.field-meta.xml
<CustomField>
    <fullName>PLS_TA_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PLS TA Probes</relationshipLabel>
    <relationshipName>PLS_TA_Probes</relationshipName>
    <type>Lookup</type>
</CustomField>