sandbox_fixtures/pls_ta_probe/force-app/main/default/objects/PLS_TA_Probe__c/fields/PLS_TA_Used_Units__c.field-meta.xml
<CustomField>
    <fullName>PLS_TA_Used_Units__c</fullName>
    <label>Used Units</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>