sandbox_fixtures/pls_ta_probe/force-app/main/default/objects/PLS_TA_Probe__c/validationRules/PLS_TA_VR01_Locked_Zero_Units.validationRule-meta.xml
<ValidationRule>
    <fullName>PLS_TA_VR01_Locked_Zero_Units</fullName>
    <active>true</active>
    <description>Locked probes must have zero units.</description>
    <errorConditionFormula>PLS_TA_Locked__c = TRUE &amp;&amp; PLS_TA_Units__c != 0</errorConditionFormula>
    <errorMessage>Locked probes must have zero units.</errorMessage>
</ValidationRule>