sandbox_fixtures/pls_ta_probe/force-app/main/default/objects/PLS_TA_Probe__c/validationRules/PLS_TA_VR02_Archive_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>PLS_TA_VR02_Archive_Reason</fullName>
    <active>true</active>
    <description>Archived probes require an archive reason.</description>
    <errorConditionFormula>PLS_TA_Archived__c = TRUE &amp;&amp; ISBLANK(PLS_TA_Archive_Reason__c)</errorConditionFormula>
    <errorMessage>Archived probes require an archive reason.</errorMessage>
</ValidationRule>