sandbox_fixtures/pls_ta_probe/force-app/main/default/objects/PLS_TA_Probe__c/validationRules/PLS_TA_VR03_New_Unit_Cap.validationRule-meta.xml
<ValidationRule>
    <fullName>PLS_TA_VR03_New_Unit_Cap</fullName>
    <active>true</active>
    <description>New probes cannot start with more than 100 units.</description>
    <errorConditionFormula>ISNEW() &amp;&amp; PLS_TA_Units__c &gt; 100</errorConditionFormula>
    <errorMessage>New probes cannot start with more than 100 units.</errorMessage>
</ValidationRule>