sandbox_fixtures/pls_ta_probe/force-app/main/default/objects/PLS_TA_Probe__c/validationRules/PLS_TA_VR04_Positive_Score.validationRule-meta.xml
<ValidationRule>
    <fullName>PLS_TA_VR04_Positive_Score</fullName>
    <active>true</active>
    <description>Score must be positive.</description>
    <errorConditionFormula>PLS_TA_Score__c &lt;= 0</errorConditionFormula>
    <errorMessage>Score must be positive.</errorMessage>
</ValidationRule>