sandbox_fixtures/pls_ta_probe/force-app/main/default/objects/PLS_TA_Probe__c/validationRules/PLS_TA_VR05_Used_Within_Total.validationRule-meta.xml
<ValidationRule>
    <fullName>PLS_TA_VR05_Used_Within_Total</fullName>
    <active>true</active>
    <description>Used units cannot exceed total units.</description>
    <errorConditionFormula>PLS_TA_Used_Units__c &gt; PLS_TA_Units__c</errorConditionFormula>
    <errorMessage>Used units cannot exceed total units.</errorMessage>
</ValidationRule>