sandbox_fixtures/pls_ta_probe/force-app/main/default/objects/PLS_TA_Probe__c/validationRules/PLS_TA_VR06_Restricted_Owner.validationRule-meta.xml
<ValidationRule>
    <fullName>PLS_TA_VR06_Restricted_Owner</fullName>
    <active>true</active>
    <description>Only the integration user may modify restricted probes.</description>
    <errorConditionFormula>PLS_TA_Restricted__c = TRUE &amp;&amp; $User.Alias &lt;&gt; &quot;AKhan&quot;</errorConditionFormula>
    <errorMessage>Only the integration user may modify restricted probes.</errorMessage>
</ValidationRule>