sandbox_fixtures/pls_ta_probe/force-app/main/default/objects/PLS_TA_Probe__c/validationRules/PLS_TA_VR07_Banking_Parent_Cap.validationRule-meta.xml
<ValidationRule>
    <fullName>PLS_TA_VR07_Banking_Parent_Cap</fullName>
    <active>true</active>
    <description>Probes under Banking accounts are capped at 50,000.</description>
    <errorConditionFormula>TEXT(PLS_TA_Parent__r.Industry) = &quot;Banking&quot; &amp;&amp; PLS_TA_Amount__c &gt; 50000</errorConditionFormula>
    <errorMessage>Probes under Banking accounts are capped at 50,000.</errorMessage>
</ValidationRule>